--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>6.0.0.Final</version>
-            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -32,6 +31,11 @@
             <groupId>org.clojure</groupId>
             <artifactId>java.jdbc</artifactId>
             <version>0.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
         </dependency>
 
 
